# HEXAR-fastAPI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: __main__.py  api.py  crud.py  database.py  db_models.py  main.py  schemas.py
app/CRUD/: crud.py  substances_categories_crud.py  substances_crud.py  synthesis_crud.py  utils.py
app/api/: alarm.py  api.py  substance_category.py  substnces.py  syntheses.py
app/database/: db_config.py  db_models.py
app/schemas/: alarm_schema.py  substances_category_schema.py  substances_schema.py  syntheses_schema.py  synthesis_schema.py
tests/: smoke_test.py  test_api.py
