[project]
name = "HEXAR_fastAPI"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "onllooker", email = "aanon0560@gmail.com"},
]
dependencies = ["fastapi>=0.115.12", "uvicorn>=0.34.2", "pydentic>=0.0.1.dev3", "sqlalchemy>=2.0.40", "sqlmodel>=0.0.24", "aiosqlite>=0.21.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
]
