[project]
name = "HEXAR_fastAPI"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "onllooker", email = "aanon0560@gmail.com"},
]
dependencies = ["fastapi>=0.115.12", "uvicorn>=0.34.2", "sqlalchemy>=2.0.40", "sqlmodel>=0.0.24", "aiosqlite>=0.21.0", "pydantic>=2.11.4"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "httpx>=0.28.1",
]

[tool.flake8]
max-line-length = 150
ignore = [
    "E203",
]

[tool.black]
line-length = 150

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
no_implicit_optional = true
disable_error_code = [
  "import-untyped",
]
pretty = true
check_untyped_defs = true
allow_subclassing_any = true

[tool.autoflake]
remove_all_unused_imports = true
ignore_init_module_imports = true
in_place = true
